# CanadianExperienceIntsruments

./: CanadaMovie.anim  test.anim  test1.anim
CanadianExperienceLib/: Actor.h  CMakeLists.txt  Drawable.h  DrawableMachine.cpp  DrawableMachine.h  HaroldFactory.cpp  ImageDrawable.cpp  ImageDrawable.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PolyDrawable.cpp  PolyDrawable.h  TimelineDlg.cpp  TimelineDlg.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp  ViewTimeline.h
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  Instrument.cpp  Instrument.h  Lever.cpp  Lever.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineInterpret.cpp  MachineInterpret.h  MachineSystem.h  MachineSystemActual.cpp  MachineSystemActual.h  MachineSystemFactory.cpp  MachineSystemFactory.h  Motor.cpp  Motor.h  Peg.cpp  Peg.h  PegWheel.cpp  PegWheel.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  Shape.cpp  Shape.h  Sink.cpp  Sink.h  Source.cpp  Source.h  Winch.cpp  Winch.h
html/: _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _adapter_8cpp.html  _adapter_8h.html  _adapter_8h.js  _adapter_8h_source.html  _anim_channel_8cpp.html  _anim_channel_8h.html  _anim_channel_8h_source.html  _anim_channel_angle_8cpp.html  _anim_channel_angle_8h.html  _anim_channel_angle_8h_source.html  _anim_channel_point_8cpp.html  _anim_channel_point_8h.html  _anim_channel_point_8h_source.html  _canadian_experience_app_8cpp.html  _canadian_experience_app_8h.html  _canadian_experience_app_8h_source.html  (+346 more)
(+50 files in other folders)
